add font awseome script tag

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  
+  <!-- Font Awesome -->
+  <script src="https://use.fontawesome.com/437617e53e.js"></script>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" type="text/css" href="main.css">
