add and style footer

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,13 @@
     <div class="setlist" id="sortable-setlist">
     </div>
 	</main>
+  <footer>
+    <p>Built by Blake Sager
+      <a href="https://github.com/chasingSublimity/Traveler-Frontend">
+        <i class="fa fa-2x fa-github fa-lg gh-icon" aria-hidden="true"></i>
+      </a>
+    </p>
+  </footer>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
   <script src="https://rubaxa.github.io/Sortable/Sortable.js"></script>
 	<script src="client.js"></script>
